# php-sdl2-ext

./: .gitignore  CMakeLists.txt  CREDITS  Readme.md  config.h.in~  config.m4  config.w32  configure~  php_php_sdl2.h  php_sdl2.c  php_sdl2.dep  php_sdl2.stub.php  php_sdl2_arginfo.h  test.c
examples/: simple_window.php
tests/: 001.phpt  002.phpt  003.phpt
